fix variant handling in $GDM_KEYBOARD_LAYOUT

gdm's configuration and $GDM_KEYBOARD_LAYOUT separates layout and
variant with a space, but GConf uses tabs. Convert spaces to tabs in
$GDM_KEYBOARD_LAYOUT to work with either format, for more robustness.

https://bugzilla.gnome.org/show_bug.cgi?id=596897